WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304665
[blocks-in-inline] getClientRects is missing an entry when called on an inline box
https://bugs.webkit.org/show_bug.cgi?id=304665
Summary
[blocks-in-inline] getClientRects is missing an entry when called on an inlin...
alan
Reported
2025-12-23 19:57:04 PST
ssia
Attachments
Patch
(4.62 KB, patch)
2025-12-23 20:11 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(8.25 KB, patch)
2025-12-24 06:46 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-12-23 20:11:56 PST
Created
attachment 477837
[details]
Patch
alan
Comment 2
2025-12-24 06:46:55 PST
Created
attachment 477839
[details]
[fast-cq]Patch
EWS
Comment 3
2025-12-26 08:25:56 PST
Committed
304949@main
(8a9a5a9f8b7a): <
https://commits.webkit.org/304949@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477839
[details]
.
Radar WebKit Bug Importer
Comment 4
2025-12-26 08:26:11 PST
<
rdar://problem/167209147
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug