[blocks-in-inline] getClientRects is missing an entry when called on an inline box https://bugs.webkit.org/show_bug.cgi?id=304665

Reviewed by Antti Koivisto.

A single block inside inline (<span><div></div></span>) generates 3 "lines" and getClientRects is supposed to return all of them.
However due to ignoring 0px width (non-leading) inline boxes in collectInlineBoxRects, we only return 2 (the first, leading (0px tall)
line and the one generated by the block).
Having all lines included makes block-in-inline-client-rects-001.html fail but we already render such content incorrectly on trunk.

<div>
  <span style="outline: 1px solid green">
    <div style="width: 500px"></div>
  </span>
</div>

There should _not_ be a green line here.

* LayoutTests/TestExpectations:
* LayoutTests/fast/block/inside-inlines/getClientRects-on-inline-box-missing-entry-expected.txt: Added.
* LayoutTests/fast/block/inside-inlines/getClientRects-on-inline-box-missing-entry.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-client-rects-expected.txt: Removed.  : this is a copy of block-in-inline-client-rects-001.html
* LayoutTests/fast/inline/blocks-in-inline-client-rects.html: Removed.
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::collectInlineBoxRects const):

Canonical link: https://commits.webkit.org/304949@main